# vigor

./: .gitignore  Dockerfile  README.md  bootstrap.sh  docker-compose.yml  eosusd.cpp  eosusd.hpp  package-lock.json
contracts/: DelphiOracle.cpp  _testrick.sh  airburn.cpp  datapreproc.cpp  datapreproc.hpp  eosusdcom.abi  eosusdcom.cpp  eosusdcom.hpp  ikbash.sh  microauctions.cpp  testprc.sh  testrick.sh  testshit.sh  vigor.assetin_rc.md  vigor.cpp  vigor.hpp  vigor_jungle.sh
contracts/airburn/: airburn.abi  airburn.wasm
contracts/datapreproc/: .eosproj  datapreproc.abi  datapreproc.wasm
contracts/datapreprocx/: datapreprocx.wasm
contracts/oracle/: oracle.abi  oracle.wasm  package.json  sample.env  updater_boideos.js  updater_eosusd.js  updater_vigeos.js
contracts/oracleoracle/: oracleoracle.wasm  package-lock.json  package.json
contracts/vigor/: .eosproj  vigor.abi  vigor.assetin_rc.md  vigor.assetout_rc.md  vigor.contracts.md  vigor.wasm
contracts/vigor1111111/: vigor1111111.wasm
contracts/vigortester1/: vigortester1.wasm
scripts/: airburn_jungle.sh  install_eosio.sh  test.sh  test_airburn.sh  test_microauctions.sh
vigor/: vigor.abi
vigor/include/: vigor.hpp
vigortester1/: vigortester1.abi  vigortester1.wasm
vigortester1/include/: vigortester1.hpp
vigortester1/src/: vigortester1.cpp
zeus/: .gitignore  db.development.pprovider1.sqlite  package-lock.json  package.json  zeus-box.json
zeus/contracts/eos/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
zeus/contracts/eos/cronservice/: cronservice.abi  cronservice.cpp
zeus/contracts/eos/dappservices/: CMakeCache.txt  Makefile  cmake_install.cmake  dappservices.abi
zeus/contracts/eos/oracle/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  oracle.hpp
zeus/contracts/eos/oracleservice/: CMakeCache.txt  Makefile  cmake_install.cmake  oracleservice.abi
zeus/contracts/eos/vcpuservice/: CMakeCache.txt  Makefile  cmake_install.cmake  vcpuservice.abi  vcpuservice.cpp
zeus/contracts/eos/vcpuservice-prefix/tmp/: vcpuservice-cfgcmd.txt
zeus/contracts/eos/vigor/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  vigor.hpp
zeus/contracts/eos/vigor/utils/: payfeefsm.hpp  swap_precision.hpp
(+27 files in other folders)
